.provarCaches/00D5f000005vwGkEAI/objects/rstk__poaddrcontact__c.object
<CustomObject>
    <description>poaddrcontact__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poaddrcontact_addr__r.rstk__externalid__c &amp; &quot;_&quot; &amp; rstk__poaddrcontact_contact__r.rstk__pocontact_contact__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poaddrcontact_contact__r.rstk__pocontact_contact__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poaddrcontact_addr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Address associated with this vendor contact.</inlineHelpText>
        <label>Vendor Address</label>
        <referenceTo>rstk__povendpoaddr__c</referenceTo>
        <relationshipLabel>Vendor Address Contacts</relationshipLabel>
        <relationshipName>poaddrcontacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poaddrcontact_contact__c</fullName>
        <inlineHelpText>Name of contact person at this address.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>rstk__pocontact__c</referenceTo>
        <relationshipLabel>Vendor Address Contacts</relationshipLabel>
        <relationshipName>poaddrcontacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poaddrcontact_notify__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this contact is to receive notifications.</inlineHelpText>
        <label>Receive Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Vendor Address Contact</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Vendor_Address_Contacts</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaddrcontact_addr__c</columns>
        <columns>rstk__poaddrcontact_contact__c</columns>
        <columns>rstk__poaddrcontact_notify__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Address Contacts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vendor Address Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Address Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Contact</fullName>
        <active>true</active>
        <description>Contact is Required and not Modifiable also it should belong to Vendor address.</description>
        <errorConditionFormula>ISBLANK(rstk__poaddrcontact_contact__c ) || ( !ISNEW() &amp;&amp;  ISCHANGED(rstk__poaddrcontact_contact__c )) || ( rstk__poaddrcontact_contact__r.rstk__pocontact_povend__c &lt;&gt;  rstk__poaddrcontact_addr__r.rstk__povendpoaddr_vendno__c )</errorConditionFormula>
        <errorMessage>Contact is Required and not Modifiable also it should belong to Vendor address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Vendor_Address_Required</fullName>
        <active>true</active>
        <description>Vendor Address is required and not Modifiable.</description>
        <errorConditionFormula>ISNULL(rstk__poaddrcontact_addr__c) || (!ISNEW() &amp;&amp;  ISCHANGED(rstk__poaddrcontact_addr__c))</errorConditionFormula>
        <errorMessage>Vendor Address is required and not Modifiable.</errorMessage>
    </validationRules>
</CustomObject>